objects/EUR_TR_Survey__c.object
<CustomObject>
    <description>Is using by PR Turkey TT Project</description>
    <fields>
        <fullName>AnketID__c</fullName>
        <formula>EUR_TR_RelatedSurveyTemplateDetail__r.Id</formula>
        <label>Anket ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_AnswerCheckboxToEarnPoints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Puan Kazandıracak Checkbox Yanıt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_TR_AnswerCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Yanıt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_TR_AnswerMultiSelect__c</fullName>
        <label>Çoklu Seçim Yanıt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_AnswerNumeric__c</fullName>
        <label>Nümerik Yanıt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_AnswerRadioAsFormula__c</fullName>
        <formula>EUR_TR_AnswerRadio__r.EUR_TR_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seçim Yanıt (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_AnswerRadioToEarnPoints__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Puan Kazandıracak Seçim Yanıt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_TR_AnswerRadio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seçim Yanıt</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_TR_Survey__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_TR_TemplateDetailOption</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_TR_Survey__c</referenceTo>
        <relationshipLabel>EUR TR Survey (EUR_TR_AnswerRadio)</relationshipLabel>
        <relationshipName>EUR_TR_Survey2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_AnswerText__c</fullName>
        <label>Yazılı Yanıt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_CaptureMoment__c</fullName>
        <label>Anketin Başlayacağı An</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BeforeVisitStart</fullName>
                    <label>Ziyaret Başlamadan Önce</label>
                </value>
                <value>
                    <fullName>BeforeVisitEnd</fullName>
                    <label>Ziyaret Bitmeden Önce</label>
                </value>
                <value>
                    <fullName>BeforeDayStart</fullName>
                    <label>Gün Başlamadan Önce</label>
                </value>
                <value>
                    <fullName>BeforeDayEnd</fullName>
                    <label>Gün Bitmeden Önce</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_Description__c</fullName>
        <label>Açıklama</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ForAllCountry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ülke Geneline Uygula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_TR_IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tamamlandı</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_TR_IsScored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Puanlamalı mı?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zorunlu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MaxToEarnPoints__c</fullName>
        <label>Puan Kazandıracak Maksimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Max__c</fullName>
        <label>Maksimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MinToEarnPoints__c</fullName>
        <label>Puan Kazandıracak Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_Min__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MultiSelectAnswer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Puan Kazandıracak Çoklu Seçim Yanıt</label>
        <referenceTo>EUR_TR_Survey__c</referenceTo>
        <relationshipLabel>EUR TR Survey (EUR_TR_MultiSelectAnswer)</relationshipLabel>
        <relationshipName>MultiSelectSelectedOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_MultiSelectSelectedOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Çoklu Seçim Seçilen Seçenek</label>
        <referenceTo>EUR_TR_Survey__c</referenceTo>
        <relationshipLabel>EUR TR Survey (EUR_TR_MultiSelectSelectedOption)</relationshipLabel>
        <relationshipName>SelectedOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_PictureRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fotoğraf Zorunlu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_TR_PointsEarned__c</fullName>
        <label>Kazanılan Puan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_PointsToEarn__c</fullName>
        <label>Kazanılacak Puan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_QuestionOrder__c</fullName>
        <label>Soru Sırası</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_QuestionType__c</fullName>
        <label>Soru Tipi</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                    <label>Seçim</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                    <label>Yazılı</label>
                </value>
                <value>
                    <fullName>MultiSelect</fullName>
                    <label>Çoklu Seçim</label>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                    <label>Nümerik</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedAccountCode__c</fullName>
        <formula>EUR_TR_RelatedAccount__r.EUR_TR_AccountCode__c</formula>
        <label>Müşteri No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>İlişkili Müşteri</label>
        <referenceTo>EUR_TR_Account__c</referenceTo>
        <relationshipLabel>EUR TR Survey</relationshipLabel>
        <relationshipName>TargetAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedSurveyTemplateDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Yanıtın Soru Şablonu</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_TR_Survey__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>EUR_TR_TemplateDetail</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_TR_Survey__c</referenceTo>
        <relationshipLabel>Instance Details</relationshipLabel>
        <relationshipName>InstanceDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedSurveyTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bağlı Olduğu Anket Şablonu</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_TR_Survey__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_TR_TemplateMaster</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_TR_Survey__c</referenceTo>
        <relationshipLabel>Template Questions</relationshipLabel>
        <relationshipName>EUR_TR_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedSurvey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bağlı Olduğu Anket</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_TR_Survey__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_TR_InstanceMaster</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_TR_Survey__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_RelatedTemplateDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seçeneğin Ait Olduğu Soru</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_TR_Survey__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_TR_TemplateDetail</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_TR_Survey__c</referenceTo>
        <relationshipLabel>Question Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_SurveyRelatedTemplate_ValidFrom__c</fullName>
        <formula>EUR_TR_RelatedSurvey__r.EUR_TR_SurveyRelatedTemplate__r.EUR_TR_ValidFrom__c</formula>
        <label>Anket Başlangıç Tarihi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_TR_SurveyRelatedTemplate_ValidThru__c</fullName>
        <formula>EUR_TR_RelatedSurvey__r.EUR_TR_SurveyRelatedTemplate__r.EUR_TR_ValidThru__c</formula>
        <label>Anket Bitiş Tarihi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_TR_SurveyRelatedTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anketin Bağlı Olduğu Şablon</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_TR_Survey__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_TR_TemplateMaster</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_TR_Survey__c</referenceTo>
        <relationshipLabel>EUR TR Survey (EUR_TR_SurveyRelatedTemplate)</relationshipLabel>
        <relationshipName>EUR_TR_Survey1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_TargetRelatedTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bağlı Olduğu Şablon</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_TR_Survey__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_TR_TemplateMaster</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_TR_Survey__c</referenceTo>
        <relationshipLabel>Survey Targets</relationshipLabel>
        <relationshipName>TargetedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_TR_TotalPoints__c</fullName>
        <label>Toplam Puan</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ValidFrom__c</fullName>
        <label>Başlangıç Tarihi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_TR_ValidThru__c</fullName>
        <label>Bitiş Tarihi</label>
        <type>Date</type>
    </fields>
    <label>EUR TR Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_TR_Survey__c.EUR_TR_MultiSelectOption</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Anket_Tan_mlar</fullName>
        <columns>NAME</columns>
        <columns>EUR_TR_Description__c</columns>
        <columns>EUR_TR_ForAllCountry__c</columns>
        <columns>EUR_TR_ValidFrom__c</columns>
        <columns>EUR_TR_ValidThru__c</columns>
        <columns>EUR_TR_CaptureMoment__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_TR_Survey__c.EUR_TR_TemplateMaster</value>
        </filters>
        <label>Anket Tanımları</label>
    </listViews>
    <listViews>
        <fullName>Yan_tlanan_Anketler</fullName>
        <columns>NAME</columns>
        <columns>EUR_TR_Description__c</columns>
        <columns>EUR_TR_RelatedAccount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_TR_Survey__c.EUR_TR_InstanceMaster</value>
        </filters>
        <label>Yanıtlanan Anketler</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>EUR_TR_Survey No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUR TR Survey</pluralLabel>
    <recordTypes>
        <fullName>EUR_TR_InstanceDetail</fullName>
        <active>true</active>
        <label>EUR_TR_InstanceDetail</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_TR_InstanceMaster</fullName>
        <active>true</active>
        <label>EUR_TR_InstanceMaster</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_TR_MultiSelectOption</fullName>
        <active>true</active>
        <label>EUR_TR_MultiSelectOption</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_TR_TemplateDetail</fullName>
        <active>true</active>
        <label>EUR_TR_TemplateDetail</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_TR_TemplateDetailOption</fullName>
        <active>true</active>
        <label>EUR_TR_TemplateDetailOption</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_TR_TemplateMaster</fullName>
        <active>true</active>
        <label>EUR_TR_TemplateMaster</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_TR_TemplateTarget</fullName>
        <active>true</active>
        <label>EUR_TR_TemplateTarget</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>